# GMSN

./: README.md
maxout/: CMakeLists.txt  Matrix.cpp  MaxMinVec.cpp  MaxOutNet.cpp  MaxOutUnit.cpp  main.cpp
maxout/ReadGet/: ReadData.cpp
maxout/include/: Matrix.hpp  MaxMinVec.hpp  MaxOutNet.hpp  MaxOutUnit.hpp
maxout/include/ReadGet/: ReadData.hpp
maxout/include/utils/: MultiplyMatrix.hpp
maxout/test_file/: test1.csv  test2.csv  test3.csv
maxout/utils/: MultiplyMatrix.cpp
